Fix browser extension connect account
